<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/update_meaning"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/txt_word_dialog"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"

            android:textAlignment="center"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:id="@+id/edt_meaning_dialog"
            android:hint="UPDATE YOUR WORD  "
            android:textAlignment="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"

            android:layout_height="wrap_content">

            <Button
                android:text="@string/update"
                android:layout_width="wrap_content"
                android:layout_height="45dp"

                android:id="@+id/btn_update_dialog" />

            <Button
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"

                android:id="@+id/btn_cancel_dialog" />


        </LinearLayout>



    </LinearLayout>


</LinearLayout>