<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/huydiet1"
    android:layout_width="match_parent"
    android:background="@drawable/banner1"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context="com.example.user.dictionary_eng_ja.MainActivity_Intro">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:alpha="0.6"
        android:layout_marginTop="15dp"
        >
        <LinearLayout
            android:weightSum="5"
            android:translationY="2dp"
            android:translationX="1dp"
            android:translationZ="10dp"
            android:background="#42000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear_Search"

            >

            <EditText

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/search"

                android:textSize="33dp"
                android:textColorHighlight="@android:color/primary_text_light"
                android:textColor="@android:color/white"
                android:textStyle="italic"
                android:layout_weight="5"
                android:textColorLink="@android:color/secondary_text_dark"
                android:textColorHint="@android:color/secondary_text_dark"
                android:id="@+id/edt_search" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/search"
                android:layout_weight="1"
                android:id="@+id/IMGV_search"
                />

                <Button

                    android:layout_width="44dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:id="@+id/btn_search" />

            </FrameLayout>
        </LinearLayout>




    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/linea_taskbar"
        android:weightSum="4"


        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_word_english"
                android:src="@drawable/en"
                android:layout_marginLeft="20dp"
                android:onClick="onClick"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english_w"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:layout_below="@+id/btn_word_english"

                android:layout_marginLeft="12dp"
                />
        </RelativeLayout>





        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:id="@+id/btn_word_japan"
                android:src="@drawable/japan"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:background="@android:color/transparent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="2dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/japan"
                android:layout_gravity="center"

                android:layout_marginLeft="14dp"
                android:layout_below="@id/btn_word_japan"
                android:textColor="@android:color/white"
                />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <ImageButton
                android:layout_width="wrap_content"
                android:onClick="onClick"
                android:layout_height="wrap_content"
                android:id="@+id/btn_word_favourite"
                android:src="@drawable/favourite"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="25dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favourite"
                android:layout_gravity="center"
                android:layout_below="@id/btn_word_favourite"
                android:textColor="@android:color/white"
                android:layout_marginLeft="11dp"

                />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_setting"
                android:src="@drawable/settings"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="11dp"
                android:onClick="onClick"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:layout_below="@+id/btn_setting"
                android:layout_gravity="center"

                android:layout_marginLeft="09dp"
                android:textColor="@android:color/white"
                />
        </RelativeLayout>



    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_fragment"
        >

    </RelativeLayout>




</LinearLayout>
